# phosphor-logging

./: event_afid_map.hpp  meson.build  meson.options
extensions/: meson.build
extensions/ael/: ael-registry.json  ael.cpp  ael.hpp  ael_config.json  ael_entry.cpp  ael_entry.hpp  aeltool.py  dbus_exporter.hpp  entry_points.cpp  main.cpp  manager.cpp  manager.hpp  meson.build  model.hpp  serializer.cpp  serializer.hpp  validator.cpp  validator.hpp  verify_ael.sh
test/: meson.build
test/ael/: meson.build  test_ael.cpp
tools/: ael_pipeline.py
yaml/com/amd/Event/: Cper.events.yaml
yaml/com/amd/ael/: afid_registry.yaml  event_afid_map.yaml
yaml/xyz/openbmc_project/Logging/Entry/: Oem.interface.yaml
